--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,186 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="54" data-price="219.63">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FFB24N"><img src="https://images-na.ssl-images-amazon.com/images/I/81U4Fw6p-BL._SX522_.jpg" alt="ASA JTV24DC LED TV with Integrated HDTV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>7 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FFB24N">ASA JTV24DC LED TV with Integrated HDTV</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$219.63</span><span class="ori_price">$479.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FFB24N">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="58" data-price="209.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NzO8Hh"><img src="https://images-na.ssl-images-amazon.com/images/I/71o6E6A4-1L._SX679_.jpg" alt="LED HDTV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>190 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NzO8Hh">Sceptre 50 inches Slim ATSC QAM MEMC 120 1080p LED HDTV, Metal Black (2019)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$209.97</span><span class="ori_price">$499.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NzO8Hh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="99.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XgpIGQ"><img src="https://images-na.ssl-images-amazon.com/images/I/614rX%2BFqKEL._SX679_.jpg" alt="Powerbeats3 Wireless Earphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,342 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XgpIGQ">Powerbeats3 Wireless Earphones - Neighborhood Collection - Turf Green</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$199.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XgpIGQ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="62" data-price="11.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IUGIK0"><img src="https://images-na.ssl-images-amazon.com/images/I/51kUtEdZW3L._SY879_.jpg" alt="Samsung Active InEar Headphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>801 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IUGIK0">Samsung Active InEar Headphones for Universal/SmartPhones, Retail Packaging - Black Sapphire - EO-EG920LBEGUS</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.25</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IUGIK0">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="58" data-price="20.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XdA7Dx"><img src="https://images-na.ssl-images-amazon.com/images/I/61OReVv5ooL._SY741_.jpg" alt="Samsung Galaxy Note9 Replacement S-Pen" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>141 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XdA7Dx">Samsung Galaxy Note9 Replacement S-Pen, Yellow / Ocean Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$20.97</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XdA7Dx">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="24.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IVPuHF"><img src="https://images-na.ssl-images-amazon.com/images/I/51LJJnxcbnL._UX679_.jpg" alt="adidas Youth Soccer Tiro Training Pants" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>873 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IVPuHF">adidas Youth Soccer Tiro Training Pants</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.25</span><span class="ori_price">$40.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IVPuHF">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="72" data-price="19.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xg7NA6"><img src="https://images-na.ssl-images-amazon.com/images/I/51ZtY0BTh2L._SX679_.jpg" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>4 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>72% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xg7NA6">New Aquatix (Platinum Grey, 21 Ounce) Pure Stainless Steel Double Wall Vacuum Insulated Sports Water Bottle Convenient Flip Top Cap with Removable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.90</span><span class="ori_price">$69.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xg7NA6">Shop Now at Amazon</a><p>run out of stock soon</p></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="14.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XkcQzS"><img src="https://images-na.ssl-images-amazon.com/images/I/51KfGqD5pqL._SX522_.jpg" alt="LifeStraw Personal Water Filter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>8,024 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XkcQzS">LifeStraw Personal Water Filter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.89</span><span class="ori_price">$17.47</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XkcQzS">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XdAUV1"><img src="https://images-na.ssl-images-amazon.com/images/I/71TAjkUlqXL._SX679_.jpg" alt="Airbed" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>410 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XdAUV1">Intex Dura-Beam Standard Series Pillow Rest Raised Airbed w/Built-in Pillow & Internal Electric Pump</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.95</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XdAUV1">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XlnmXD"><img src="https://images-na.ssl-images-amazon.com/images/I/81g2Mm4BHBL._UX522_.jpg" alt="Champion Men's Jersey Short With Pockets" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>4,223 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XlnmXD">Champion Men's Jersey Short With Pockets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$10.00</span><span class="ori_price">$20.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlnmXD">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="24.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2J9ezhn"><img src="https://images-na.ssl-images-amazon.com/images/I/6182S7MYC2L._SX522_.jpg" alt="Echo Dot" /></a>
