--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,210 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xipoYS"><img src="https://m.media-amazon.com/images/I/61NQ-wHEYaL._SR400,400_.jpg" alt="True Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>36 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xipoYS">True Wireless Earbuds, BassPal Bluetooth 5.0 Headphones TWS in-Ear Mini Headset w/Mic IPX7 Waterproof, Deep Bass 3D Stereo Sound, Portable Charging...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>50DGQ9SB</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xipoYS">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="29.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FDx0K4"><img src="https://m.media-amazon.com/images/I/71NQvpX6jXL._SR400,400_.jpg" alt="USB C Hub, Aiugko Type C Adapter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>75 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FDx0K4">USB C Hub, Aiugko Type C Adapter 4K HDMI (30Hz), USB 3.0 SD/TF Card Reader, PD Charge Port, 2 USB 3.0 Ports, 2 USB-C Data Port for Type c Devices MacBook Pro...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.50</span><span class="ori_price">$58.99</span></address>
+      <p><span>Take <strong>50% off at $58.99</strong> with promo code: <strong>50BPDX9O</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FDx0K4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xiqmEu"><img src="https://m.media-amazon.com/images/I/61DpzdeUjNL._SR400,400_.jpg" alt="Elecder Bluetooth Headphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>208 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xiqmEu">Elecder Bluetooth Headphones, Wireless Sports Earbuds Waterproof IPX7 with Microphone for Running Workout, Noise Cancelling Audifonos for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>50% off at $19.99</strong> with promo code: <strong>50GCC6BA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xiqmEu">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="18.13">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Np04v6"><img src="https://m.media-amazon.com/images/I/51t--q6iTmL._SR400,400_.jpg" alt="AUXBLUE Bluetooth Headset" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>70 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Np04v6">AUXBLUE Bluetooth Headset Wireless Handsfree Earpiece Headphone Active Noise Cancelling Double Digital MIC Cell Phone Trucker Business Office...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.13</span><span class="ori_price">$36.99</span></address>
+      <p><span>Take <strong>51% off at $36.99</strong> with promo code: <strong>51LDYY1Q</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Np04v6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FDzU1C"><img src="https://m.media-amazon.com/images/I/71Y9NAdTS+L._SR400,400_.jpg" alt="Makeup Brushes" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>43 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FDzU1C">Makeup Brushes 12 Pcs Premium Synthetic Bristle Foundation Powder Concealers Eye Shadows Makeup Brush Sets (Lilac, Microcrystalline Silk)...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>50Z5TGGN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FDzU1C">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="32" data-price="8.83">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XdmDmi"><img src="https://m.media-amazon.com/images/I/51A6XGHp5EL._SR400,400_.jpg" alt="Silicone Spatula Set" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>11 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XdmDmi">Silicone Spatula Set - 6 Piece Spatula Set,Heat-Resistant Kitchen Utensil Set Cooking Tools,Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.83</span><span class="ori_price">$12.99</span></address>
+      <p><span>Take <strong>32% off at $12.99</strong> with promo code: <strong>32CQJ88Q</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XdmDmi">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Nlpt8W"><img src="https://m.media-amazon.com/images/I/71Js5cgOyvL._SR400,400_.jpg" alt="BoxLegend Shirt Folding Board" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,249 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Nlpt8W">BoxLegend Shirt Folding Board t Shirts Clothes Folder Durable Plastic Laundry folders Folding Boards flipfold</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.98</span></address>
+      <p><span>Take <strong>50% off at $19.98</strong> with promo code: <strong>50SO7D1D</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Nlpt8W">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.27">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X73y5a"><img src="https://m.media-amazon.com/images/I/71GuCOoi26L._SR400,400_.jpg" alt="TRSCIND Baby Pool Float" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>35 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X73y5a">TRSCIND Baby Pool Float, Inflatable Swimming Floats,Alpaca Pool Floats for Kids Toddler Infant,Llama Gifts for Girl-boy (1-7year 15-90lb)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.27</span><span class="ori_price">$14.54</span></address>
+      <p><span>Take <strong>50% off at $14.54</strong> with promo code: <strong>50WV62JH</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 29, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X73y5a">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="37.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IYipuO"><img src="https://m.media-amazon.com/images/I/61pJr10SzqL._SR400,400_.jpg" alt="LNC Faux-Wood Bond Pendant Lighting" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>10 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IYipuO">LNC Faux-Wood Bond Pendant Lighting, 1 Light Heavy Duty Pendant Lights, Dimmable and Height Adjustable Small Cage Lighting Fixture</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$37.49</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>25% off at $49.99</strong> with promo code: <strong>25G3L9YX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IYipuO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XaItXE"><img src="https://m.media-amazon.com/images/I/61iDnc+jQrL._SR400,400_.jpg" alt="Pet Dog Seat Covers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>44 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XaItXE">Pet Dog Seat Covers with Mesh Window, Waterproof Dog Back Seat Cover for Cars Trucks and SUVs, Nonslip Dog Car Seat Cover Hammock, Washable Zipper Dog Hammock...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>20% off at $19.99</strong> with promo code: <strong>2092SYH3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XaItXE">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="70" data-price="11.10">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LqQEwx"><img src="https://m.media-amazon.com/images/I/61cXlm4gQsL._SR400,400_.jpg" alt="Fast Wireless Charger" /></a>
