--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,134 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="23" data-price="149.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xd11Xd"><img src="https://images-na.ssl-images-amazon.com/images/I/517xdFrVFHL._SX522_.jpg" alt="Samsung Galaxy Tab E" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,199 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xd11Xd">Samsung Galaxy Tab E 9.6"; 16 GB Wifi Tablet (Black) SM-T560NZKUXAR</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$149.99</span><span class="ori_price">$193.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xd11Xd">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="18" data-price="89.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IWIzhu"><img src="https://images-na.ssl-images-amazon.com/images/I/618nVpEed8L._SX522_.jpg" alt="Electric Acupressure" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>150 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>18% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IWIzhu">Breo iPalm520s Electric Acupressure Hand Palm Massager with Air Pressure and Heat Compression for Fingers Coldness Strain and Numbness Relief (Basic Version) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$89.99</span><span class="ori_price">$109.99</span>
+        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IWIzhu">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="139.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xh32q1"><img src="https://images-na.ssl-images-amazon.com/images/I/71%2BGjEuJ3LL._SX679_.jpg" alt="Personal Evaporative Air Cooler" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>322 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xh32q1">Evapolar evaLIGHT Personal Evaporative Air Cooler and Humidifier / Cleaner, Portable Air Conditioner, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$139.00</span><span class="ori_price">$179.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xh32q1">Shop Now at Amazon</a><p>run out of stock soon</p></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XyHxk5"><img src="https://images-na.ssl-images-amazon.com/images/I/51dZxAVZCdL._SX679_.jpg" alt="Fosmon Xbox One/One X/One S Dual Controller Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>325 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XyHxk5">Fosmon Xbox One/One X/One S Dual Controller Charger, [Dual Slot] High Speed Docking Charging Station with 2 x 1000mAh Rechargeable Battery Packs - White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$25.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XyHxk5">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xiNPFx"><img src="https://images-na.ssl-images-amazon.com/images/I/61LmE6aMYrL._SX679_.jpg" alt="Peteme Baby Monitor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>158 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xiNPFx">Peteme Baby Monitor 1080P FHD Home WiFi Security Camera Sound/Motion Detection with Night Vision 2-Way Audio Cloud Service Available Monitor Baby/Elder/Pet...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xiNPFx">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="99.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LuK9ZF"><img src="https://images-na.ssl-images-amazon.com/images/I/71M35zB%2BiKL._SX522_.jpg" alt="Spiralizer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>447 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LuK9ZF">KitchenAid KSM2APC Spiralizer Plus Attachment with Peel, Core and Slice, Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.95</span><span class="ori_price">$149.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LuK9ZF">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="67" data-price="9.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/300I8sq"><img src="https://images-na.ssl-images-amazon.com/images/I/71IGgRDKzSL._SX522_.jpg" alt="Digital Food Scale" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>7,251 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>67% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/300I8sq">Digital Food Scale Digital Weight Scale, Grams and Ounces by Greater Goods</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.95</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/300I8sq">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="25.20">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XB3RJB"><img src="https://images-na.ssl-images-amazon.com/images/I/61COeg9hafL._AC_SR300,300_.jpg" alt="Native Deodorant" /></a>
