--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,9 +4,10 @@
 
       <div class="wrap">
         <div class="footer-content">
-          <div class="footer-section about">
+          <div class="footer-section about clearfix">
             <h1 class="logo-text"><span>Oh,</span>i gotta buy this</h1>
-            <p>Oh,igottabuythis is the curation platform to discover awesome product from around the world. Staying up to date with the latest tech, the newest brilliant inventions, odd gadgets unique & weird design products and most incredible crowdfunding campaigns.</p>
+            <p>Oh,igottabuythis is the curation platform to discover awesome product from around the world and Staying up to date with the latest tech, the newest brilliant inventions, odd gadgets unique & weird design products</p>
+            <p>Oh,igottabuythis is the deal information platform to find thousands of Amazon best deals, coupon codes, you love. Easy to keep up to date with the latest information of deals</p>
             <div class="contact">
               <span><i class="fas fa-envelope"></i> &nbsp; ohigottabuythis@gmail.com </span>
             </div>
@@ -18,7 +19,7 @@
             </div>
           </div>
 
-          <div class="footer-section links">
+          <div class="footer-section links clearfix">
             <h2>Quick Links</h2><br />
             <ul>
               <a href="#n"><li>HOME</li></a>
@@ -31,7 +32,7 @@
 
           </div>
 
-          <div class="footer-section contact-form">
+          <div class="footer-section contact-form clearfix">
             <h2>Contact Us</h2><br />
             <form action="/" method="post">
              <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
@@ -42,9 +43,9 @@
 
         </div>
         
-        <div class="footer-bottom">
+        <!-- <div class="footer-bottom">
           &copy; ohigottabuythis.com | Designed by Steve
-        </div>
+        </div> -->
       </div>
 
     </div>
